# metapath

./: CMakeLists.txt  metapath.sln  metapath.vcproj
src/: Dialogs.c  Dlapi.c  Helpers.c  Helpers.h  metapath.c  version.h
wdkbuild/: make.cmd  metapath.mak
